# ogrt

./: .gitignore  Gomfile  Makefile  README.md  daemon.go  generate-protocol  generate-protocol.sh  ogrt.c  ogrt.h  ogrt.pb-c.c  ogrt.pb-c.h  ogrt.pb.go  ogrt.proto  ogrt_elf.c  ogrt_stamp.s  preload.c
client/: TODO  configure  ld  vendorize  waf  wscript
client/junk/: hello  hello.c  test
client/src/: ogrt-cli.c  ogrt-cmdline.c  ogrt-cmdline.ggo  ogrt-cmdline.h.in  ogrt-config.h  ogrt-log.h  ogrt-main.c  ogrt-main.h  ogrt-readso.c  ogrt-readso.h  ogrt-signature.c  ogrt-signature.h  ogrt-test.h  ogrt-util.c  ogrt-util.h  ogrt.pb-c.c  ogrt.pb-c.h  stamp.s  stamp_hello.s  stamp_helloshared.s  test_main.c  test_ogrt_read_info  test_util.c
client/test/: ogrt-test.h  test_processinfo.c  test_readso.c  test_util.c
client/wrappers/: ld
go/: daemon.go  daemon_test.go  ogrt.conf
go/db/: db.go
messages/: ogrt.pb.go
ogrt-preload/src/: ogrt.c  ogrt.pb-c.c  ogrt.pb-c.h  ogrt_elf.c
ogrt-protocol/: ogrt.proto
ogrt-server/: ogrt-server.go  ogrt.conf
ogrt-server/db/: db.go
ogrt-server/messages/: ogrt.pb.go
ogrt-server/ogrt-protocol/: ogrt.pb.go
ogrt-server/output/: database.go  file.go  interface.go
ogrt_preload/: Makefile
ogrt_preload/src/: ogrt.pb-c.c  ogrt.pb-c.h  ogrt_elf.c
ogrt_proto/: ogrt.proto
ogrt_stamp/: ogrt-stamp
preload/: Makefile  autogen.sh  configure  configure.ac  wscript
preload/junk/: hello  hello_shared.c  test.c
preload/src/: Makefile.am  ogrt-cli.c  ogrt-cli.h  ogrt-cmdline.c  ogrt-cmdline.ggo  ogrt-cmdline.h  ogrt-fileutil.c  ogrt-fileutil.h  ogrt-log.c  ogrt-main.c  ogrt-main.h  ogrt-readso.c  ogrt-readso.h  ogrt-signature.c  ogrt-util.c  ogrt-util.h  ogrt.c  ogrt.h  ogrt.pb-c.c  ogrt.pb-c.h  ogrt_elf.c  stamp.s
protocol/: ogrt.proto
scraps/: test-uuid.c
server/: build.sh  dist.sh  ogrt-server.go  ogrt.conf  run.sh
server/jobs/: 100
server/output/: dot.go  file.go  interface.go  (+3 more)
stamp/: ogrt-stamp
talks/: README.md
tests/: exec_test.c  fork_test.c  simple_bash.sh  test_ogrt_read_info.c
(+9 files in other folders)
